ensure progress bar z-index

--- a/common/common.css
+++ b/common/common.css
@@ -47,7 +47,7 @@ page-context {
   overflow: hidden;
   position: absolute;
   top: 3rem;
-  z-index: 10;
+  z-index: 99999;
 }
 
 .progress-bar.error {
